always return 'size' wrappers when using filters
