# webserver/src/repository/transaction.rs
@@ -8,6 +8,7 @@ use orm::schema::{
 use orm::transactions::{
     InnerTransactionDb, TransactionHistoryDb, WrapperTransactionDb,
 };
+use crate::entity::transaction::TransactionKind;
 
 use super::utils::{Paginate, PaginatedResponseDb};
 use crate::appstate::AppState;
@@ -49,6 +50,14 @@ pub trait TransactionRepositoryTrait {
         &self,
         offset: i64,
         size: i32,
+    ) -> Result<Vec<WrapperTransactionDb>, String>;
+
+    async fn find_recent_matching_wrappers(
+        &self,
+        offset: i64,
+        size: i32,
+        kinds: Option<Vec<TransactionKind>>, 
+        tokens: Option<Vec<String>>,
     ) -> Result<Vec<WrapperTransactionDb>, String>;
 }
 
@@ -162,6 +171,124 @@ impl TransactionRepositoryTrait for TransactionRepository {
 
         conn.interact(move |conn| {
             wrapper_transactions::table
+                .order(wrapper_transactions::dsl::block_height.desc())
+                .offset(offset)
+                .limit(size as i64)
+                .select(WrapperTransactionDb::as_select())
+                .get_results(conn)
+        })
+        .await
+        .map_err(|e| e.to_string())?
+        .map_err(|e| e.to_string())
+    }
+
+    async fn find_recent_matching_wrappers(
+        &self,
+        offset: i64,
+        size: i32,
+        kinds: Option<Vec<TransactionKind>>, 
+        tokens: Option<Vec<String>>,
+    ) -> Result<Vec<WrapperTransactionDb>, String> {
+        let conn = self.app_state.get_db_connection().await;
+
+        conn.interact(move |conn| {
+            use diesel::prelude::*;
+            use diesel::dsl;
+
+            let mut query = wrapper_transactions::table.into_boxed();
+
+            let mut exists_clauses: Vec<String> = Vec::new();
+
+            // Kind filter
+            if let Some(kinds) = kinds {
+                if !kinds.is_empty() {
+                    fn kind_to_db(k: &TransactionKind) -> &'static str {
+                        match k {
+                            TransactionKind::TransparentTransfer => "transparent_transfer",
+                            TransactionKind::ShieldedTransfer => "shielded_transfer",
+                            TransactionKind::ShieldingTransfer => "shielding_transfer",
+                            TransactionKind::UnshieldingTransfer => "unshielding_transfer",
+                            TransactionKind::MixedTransfer => "mixed_transfer",
+                            TransactionKind::Bond => "bond",
+                            TransactionKind::Redelegation => "redelegation",
+                            TransactionKind::Unbond => "unbond",
+                            TransactionKind::Withdraw => "withdraw",
+                            TransactionKind::ClaimRewards => "claim_rewards",
+                            TransactionKind::VoteProposal => "vote_proposal",
+                            TransactionKind::InitProposal => "init_proposal",
+                            TransactionKind::ChangeMetadata => "change_metadata",
+                            TransactionKind::ChangeCommission => "change_commission",
+                            TransactionKind::RevealPk => "reveal_pk",
+                            TransactionKind::IbcMsgTransfer => "ibc_msg_transfer",
+                            TransactionKind::IbcTransparentTransfer => "ibc_transparent_transfer",
+                            TransactionKind::IbcShieldingTransfer => "ibc_shielding_transfer",
+                            TransactionKind::IbcUnshieldingTransfer => "ibc_unshielding_transfer",
+                            TransactionKind::BecomeValidator => "become_validator",
+                            TransactionKind::DeactivateValidator => "deactivate_validator",
+                            TransactionKind::ReactivateValidator => "reactivate_validator",
+                            TransactionKind::UnjailValidator => "unjail_validator",
+                            TransactionKind::ChangeConsensusKey => "change_consensus_key",
+                            TransactionKind::InitAccount => "init_account",
+                            TransactionKind::Unknown => "unknown",
+                        }
+                    }
+
+                    let kinds_str = kinds
+                        .into_iter()
+                        .map(|k| format!("'{}'::transaction_kind", kind_to_db(&k)))
+                        .collect::<Vec<_>>()
+                        .join(",");
+                    exists_clauses.push(format!(
+                        "inner_transactions.kind IN ({})",
+                        kinds_str
+                    ));
+                }
+            }
+
+            // Token filters
+            if let Some(tokens) = tokens {
+                if !tokens.is_empty() {
+                    let tokens_str = tokens
+                        .into_iter()
+                        .map(|t| format!("'{}'", t))
+                        .collect::<Vec<_>>()
+                        .join(",");
+
+                    // IBC and non-IBC transfers have different 'data' json structure, so the query will differ slighlty
+
+                    // Non-IBC transfer kinds
+                    let regular_kinds_str = "'transparent_transfer'::transaction_kind,
+                                              'shielded_transfer'::transaction_kind,
+                                              'shielding_transfer'::transaction_kind,
+                                              'unshielding_transfer'::transaction_kind,
+                                              'mixed_transfer'::transaction_kind";
+
+                    // IBC transfer kinds
+                    let ibc_kinds_str = "'ibc_transparent_transfer'::transaction_kind,
+                                          'ibc_shielding_transfer'::transaction_kind,
+                                          'ibc_unshielding_transfer'::transaction_kind";
+
+                    let token_predicate = format!(
+                        "((inner_transactions.kind IN ({regular_kinds}) AND ((inner_transactions.data::jsonb->'sources'->0->>'token') = ANY(ARRAY[{tokens}]) OR (inner_transactions.data::jsonb->'targets'->0->>'token') = ANY(ARRAY[{tokens}])))
+                          OR (inner_transactions.kind IN ({ibc_kinds}) AND (inner_transactions.data::jsonb->0->'Ibc'->'address'->>'Account') = ANY(ARRAY[{tokens}])))",
+                        regular_kinds = regular_kinds_str,
+                        ibc_kinds = ibc_kinds_str,
+                        tokens = tokens_str,
+                    );
+                    exists_clauses.push(token_predicate);
+                }
+            }
+
+            if !exists_clauses.is_empty() {
+                let exists_sql = format!(
+                    "EXISTS (SELECT 1 FROM inner_transactions WHERE inner_transactions.wrapper_id = wrapper_transactions.id AND {} )",
+                    exists_clauses.join(" AND ")
+                );
+                let exists_filter = dsl::sql::<diesel::sql_types::Bool>(&exists_sql);
+                query = query.filter(exists_filter);
+            }
+
+            query
                 .order(wrapper_transactions::dsl::block_height.desc())
                 .offset(offset)
                 .limit(size as i64)
